--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webstormprojects",
+  "name": "nodejs-test",
   "version": "1.0.0",
   "description": "nodejs test",
   "main": "index.js",
